# capital-gains-calculator

./: .flake8  .gitignore  .pylintrc  README.md  process.py  pyproject.toml
.github/workflows/: check-code-style.yaml
capital_gains_calculator/: __init__.py  disposal.py  excess_reportable_income.py  pooled_purchase.py  purchase.py  read_xml.py  reconcile.py  sale.py  security.py  transaction.py  utils.py
uk_tax_report/: __init__.py  account.py  converters.py  disposal.py  dividend.py  pooled_purchase.py  purchase.py  read_xml.py  reconcile.py  sale.py  security.py  transaction.py  utils.py
uk_tax_report/readers/: __init__.py  csv_data_file.py  data_file.py  xml_data_file.py  xml_utils.py
uk_tax_report/transactions/: __init__.py  bed_and_breakfast.py  credit_debit.py  disposal.py  dividend.py  excess_reportable_income.py  pooled_purchase.py  purchase.py  sale.py  scrip_dividend.py  transaction.py
